objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Berry_GCC_Tomorrow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Berry GCC Tomorrow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Berry_GCC_dateTime__c</fullName>
        <label>Berry GCC Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Account.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Contact Id (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_45_Day_Survey_Sent__c</fullName>
        <label>Date 45 Day Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Contact_Cleaned__c</fullName>
        <label>Date Contact Cleaned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Post_Launch_Survey_Sent__c</fullName>
        <label>Date Post Launch Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Live__c</fullName>
        <formula>Account.Days_Live__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Account_Went_Live__c</fullName>
        <formula>Account.Days_Since_Live__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Account Went Live</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>TODAY()-LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Live__c</fullName>
        <label>Days Since Live</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Designated_Sales_Representative__c</fullName>
        <inlineHelpText>For Referral Partner Email Blasts</inlineHelpText>
        <label>Designated Sales Representative</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_Not_Purchase_LaunchPad__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check off if prospect will not purchase LaunchPad</inlineHelpText>
        <label>Did Not Purchase LaunchPad?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executed_Clause_For_Flagging_E2C__c</fullName>
        <label>Executed Clause For Flagging-E2C</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Executed_Clause_For_Flagging__c</fullName>
        <label>Executed Clause For Flagging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IMS_Rep__c</fullName>
        <formula>Account.IMS_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMS Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Survey_Sent__c</fullName>
        <description>Used to mark when an Issue Resolution Survey was sent.  Used by YBN.</description>
        <label>Issue Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Record_type_Conversion__c</fullName>
        <description>The Original Lead Recordtype for converted records, used to make sure this goes to the correct recordtype</description>
        <label>Lead Record type (Conversion)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LinkedIn Connection?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LiveChat_Contact_URL_Last_Visited__c</fullName>
        <label>LiveChat Contact URL Last Visited</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lost Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Yodle_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Yodle Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Months_Live__c</fullName>
        <formula>Account.Months_Live__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months Live</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Eligible_E2C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Eligible-E2C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Sent__c</fullName>
        <label>NPS Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <description>The ID associated with each partner. ID is unique to Partner.</description>
        <label>Partner ID</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pictimonial_PW__c</fullName>
        <label>Pictimonial PW</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pictimonial_UN__c</fullName>
        <label>Pictimonial UN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plain_Mobile_Phone__c</fullName>
        <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( MobilePhone, '.', '') , ' ', '') , '-', '') , ')', '') , '(', '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plain Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plain_Other_Phone__c</fullName>
        <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( OtherPhone, '.', '') , ' ', '') , '-', '') , ')', '') , '(', '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plain Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plain_Phone__c</fullName>
        <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(Phone, '.', '')  , ' ', '')  , '-', '')  , ')', '')  , '(', '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plain Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_TP_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proactive TP Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Red_Ventures__c</fullName>
        <formula>IF((Days_Since_Last_Activity__c&lt;=30), IMAGE("/servlet/servlet.FileDownload?file=015600000009Hme","NOT AVAILABLE") , IMAGE("/servlet/servlet.FileDownload?file=015600000009Hmo","AVAILABLE"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Ventures</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Notes__c</fullName>
        <label>Reference Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Post_Launch_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether or not the post-launch survey has been sent. It should not be set by a user as the Account trigger will handle this</description>
        <inlineHelpText>Do not modify this field! It is set automatically by a workflow process.</inlineHelpText>
        <label>Send Post-Launch Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_on_Account__c</fullName>
        <formula>TEXT(Account.Status__c)</formula>
        <label>Status on Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_to_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Account_E2C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Account-E2C</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Target Account-E2C)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <externalId>true</externalId>
        <label>User ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WL_CPROD__c</fullName>
        <externalId>true</externalId>
        <label>CPROD (WL)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yodle_Email__c</fullName>
        <label>Yodle Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>id_for_survey__c</fullName>
        <label>id - for survey</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadspace_Email__c</fullName>
        <label>Email (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_FirstName__c</fullName>
        <label>First Name (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_LastName__c</fullName>
        <label>Last Name (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_LinkedIn__c</fullName>
        <label>LinkedIn (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leadspace_Score__c</fullName>
        <label>Score (LS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadspace_Title__c</fullName>
        <label>Title (LS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>send_45_day_survey__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DO NOT CHECK THIS BOX</inlineHelpText>
        <label>send 45-day survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__LT_Info__c</fullName>
        <description>Hidden field used by the Local Time App. Do not add it to the page layouts and list views.</description>
        <inlineHelpText>Hidden field used by the Local Time App. Do not add it to the page layouts and list views.</inlineHelpText>
        <label>LT Info</label>
        <length>340</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24_Short__c</fullName>
        <description>Shows the current local time (without date) for the Contact in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
"Unknown",
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 )
&amp;":"&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp; " " &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,"")
)</formula>
        <inlineHelpText>Shows the local time (without date) for the Contact in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24__c</fullName>
        <description>Shows the current local time for the Contact in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
"Unknown",
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 6, 2 ) &amp; "/" &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 9, 2 ) &amp; "/" &amp;
LEFT( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 4 ) &amp; " " &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 )
&amp;":"&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp; " " &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,"")
)</formula>
        <inlineHelpText>Shows the local time for the Contact in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Short__c</fullName>
        <description>Shows the current local time (without date) for the Contact.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
"Unknown",
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;":"&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp;" "&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
"AM",
"PM"
)
&amp; " " &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,"")
)</formula>
        <inlineHelpText>Shows the local time (without date) for the Contact.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time for the Contact.</description>
        <formula>IF(ISBLANK(tz__UTF_Offset__c),
"Unknown",
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 6, 2 ) &amp; "/" &amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 9, 2 ) &amp; "/" &amp;
LEFT( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 4 ) &amp; " " &amp;
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;":"&amp;
MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 15, 2 )
&amp;" "&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTF_Offset__c /24 ), 12, 2 ) ) &lt; 12,
"AM",
"PM"
)
&amp; " " &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone__c,"") 
)</formula>
        <inlineHelpText>Shows the local time for the Contact.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full__c</fullName>
        <description>Full timezone name.</description>
        <inlineHelpText>Full timezone name.</inlineHelpText>
        <label>Timezone (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_IANA__c</fullName>
        <description>Timezone as defined by Internet Assigned Numbers Authority (IANA).</description>
        <inlineHelpText>Timezone as defined by Internet Assigned Numbers Authority (IANA).</inlineHelpText>
        <label>Timezone (IANA)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Current timezone abbreviation (PST, EST,etc..)</description>
        <inlineHelpText>Timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTF_Offset__c</fullName>
        <description>Shows the current UTC timezone offset of the Contact. Uses the mailing address, and in its absence the Phone number field in the calculation.</description>
        <inlineHelpText>Shows the UTC timezone offset of the Contact.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Unsubscribe__c</fullName>
        <label>Email Unsubscribe</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Issue Resolution</fullName>
                </value>
                <value>
                    <fullName>Marketing Outreach</fullName>
                </value>
                <value>
                    <fullName>Upsell Outreach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_Contact_IL__c</fullName>
        <label>Non-Standard Contact IL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Level A</fullName>
                </value>
                <value>
                    <fullName>Service Level B</fullName>
                </value>
                <value>
                    <fullName>Service Level C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_Source__c</fullName>
        <label>Reference Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>Positive Review</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Video Testimonial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Gatekeeper</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
                <value>
                    <fullName>Assistant/Secretary</fullName>
                </value>
                <value>
                    <fullName>Lead Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tz__Timezone_SFDC__c</fullName>
        <description>Salesforce IANA timezone.</description>
        <inlineHelpText>Salesforce IANA timezone.</inlineHelpText>
        <label>Timezone SFDC</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Partner_Contact</fullName>
        <active>true</active>
        <description>Used for the CPP teams.</description>
        <label>Partner Contact</label>
        
    </recordTypes>
    <recordTypes>
        <fullName>YBN_IL_Contact_Type</fullName>
        <active>true</active>
        <description>.</description>
        <label>YBN IL Contact Type</label>
        
    </recordTypes>
</CustomObject>